@@ -16,6 +16,6 @@ public record IndexedTriangle(int v0, int v1, int v2, int n0, int n1, int n2) {
 
     @Override
     public String toString() {
-        return String.format("IndexedTriangle{v=[%d, %d, %d], n=[%d, %d, %d]}", v0, v1, v2, n0, n1, n2);
+        return "IndexedTriangle{v=[%d, %d, %d], n=[%d, %d, %d]}".formatted(v0, v1, v2, n0, n1, n2);
     }
 }
